// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Indicator /> fill renders a solid Indicator 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    fill="solid"
    style={
      Array [
        Object {
          "backgroundColor": "rgba(11, 112, 231, 1.0)",
          "borderColor": "black",
          "borderRadius": 3,
          "borderStyle": "solid",
          "borderWidth": 0,
        },
        Array [
          Object {
            "height": 6,
            "width": 6,
          },
        ],
      ]
    }
    variant="neutral"
  />
</View>
`;

exports[`<Indicator /> fill renders an empty Indicator 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    fill="empty"
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "borderColor": "rgba(11, 112, 231, 1.0)",
          "borderRadius": 3,
          "borderStyle": "solid",
          "borderWidth": 1,
        },
        Array [
          Object {
            "height": 6,
            "width": 6,
          },
        ],
      ]
    }
    variant="neutral"
  />
</View>
`;

exports[`<Indicator /> variant renders a negative Indicator 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    fill="solid"
    style={
      Array [
        Object {
          "backgroundColor": "rgba(209, 45, 45, 1.0)",
          "borderColor": "black",
          "borderRadius": 3,
          "borderStyle": "solid",
          "borderWidth": 0,
        },
        Array [
          Object {
            "height": 6,
            "width": 6,
          },
        ],
      ]
    }
    variant="negative"
  />
</View>
`;

exports[`<Indicator /> variant renders a neutral Indicator 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    fill="solid"
    style={
      Array [
        Object {
          "backgroundColor": "rgba(11, 112, 231, 1.0)",
          "borderColor": "black",
          "borderRadius": 3,
          "borderStyle": "solid",
          "borderWidth": 0,
        },
        Array [
          Object {
            "height": 6,
            "width": 6,
          },
        ],
      ]
    }
    variant="neutral"
  />
</View>
`;

exports[`<Indicator /> variant renders a positive Indicator 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    fill="solid"
    style={
      Array [
        Object {
          "backgroundColor": "rgba(31, 137, 14, 1.0)",
          "borderColor": "black",
          "borderRadius": 3,
          "borderStyle": "solid",
          "borderWidth": 0,
        },
        Array [
          Object {
            "height": 6,
            "width": 6,
          },
        ],
      ]
    }
    variant="positive"
  />
</View>
`;

exports[`<Indicator /> variant renders a positive empty Indicator 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    fill="empty"
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "borderColor": "rgba(31, 137, 14, 1.0)",
          "borderRadius": 3,
          "borderStyle": "solid",
          "borderWidth": 1,
        },
        Array [
          Object {
            "height": 6,
            "width": 6,
          },
        ],
      ]
    }
    variant="positive"
  />
</View>
`;

exports[`<Indicator /> variant renders a warning Indicator 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    fill="solid"
    style={
      Array [
        Object {
          "backgroundColor": "rgba(205, 130, 20, 1.0)",
          "borderColor": "black",
          "borderRadius": 3,
          "borderStyle": "solid",
          "borderWidth": 0,
        },
        Array [
          Object {
            "height": 6,
            "width": 6,
          },
        ],
      ]
    }
    variant="warning"
  />
</View>
`;
